Create branch and add font awesome link

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/bfdabd94cd.js" crossorigin="anonymous"></script>
     <title>To Do List</title>
 </head>
 
@@ -11,10 +12,11 @@
     <div class="container">
         <div class="title box">
             <h1 class="title">Today's To Do</h1>
-            <button class="refresh">O</button>
+            <i class="fa-solid fa-arrows-rotate"></i>
         </div>
         <form class="form title">
             <input type="box text" class="new-task" placeholder="Add to your list...">
+            <button type="button" id="add-button"><i class="fa-regular fa-share-from-square"></i></button>
         </form>
         <ul class="task-list">
 
