--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
             </button>
         </div>
         <form class="form task box" name="form" method="get">
-            <input type="text" name="task" class="task-text full" placeholder="Add to your list..." required>
+            <input type="text" name="task" class="tasktext" placeholder="Add to your list..." required>
             <button type="submit" class="submit btn">
                 <i class="fa-solid fa-paper-plane"></i>
             </button>
         </form>
-        <ul class="task-list">
+        <ul class="tasklist">
             <!-- taskList from js -->
         </ul>
         <div class="clear box">Clear all completed</div>
